infrastructure/roles/kubernetes/cluster/files/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    hajimari.io/enable: "true"
spec:
  rules:
    - host: argocd.gato.hermleigh.home
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
